objects/Expense_Member__c.object
<CustomObject>
    <description>It is the integration of the two other Object called Junction Object which will keep track for expenses for every member..</description>
    <fields>
        <fullName>Contributed_Amount__c</fullName>
        <description>Contribution amount for each member</description>
        <label>Contributed Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the respective member for which inserting a record</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <description>Expense of the Member..</description>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expenses Members</relationshipLabel>
        <relationshipName>Expenses_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <description>Member for Expenses..</description>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expenses Members</relationshipLabel>
        <relationshipName>Expenses_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EM-{0000}</displayFormat>
        <label>Expense Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>